server/src/webhook/snapshots/scuffle_brawl__webhook__parse__tests__webhook.delete.snap
---
source: server/src/webhook/parse.rs
expression: event
snapshot_kind: text
---
WebhookEvent {
    sender: Some(
        User {
            login: "scuffle-brawl[bot]",
            id: UserId(
                191062277,
            ),
        },
    ),
    repository: Some(
        Repository {
            id: RepositoryId(
                899726767,
            ),
            name: "ci-testing",
            owner: User {
                login: "ScuffleCloud",
                id: UserId(
                    122814584,
                ),
            },
        },
    ),
    installtion_id: Some(
        InstallationId(
            58286822,
        ),
    ),
    installation: None,
    kind: Delete,
    specific: Delete(
        DeleteWebhookEventPayload {
            enterprise: None,
            pusher_type: User,
            ref: "automation/brawl/try/22",
            ref_type: Branch,
        },
    ),
}
