server/src/webhook/snapshots/scuffle_brawl__webhook__parse__tests__webhook.repository.deleted.snap
---
source: server/src/webhook/parse.rs
expression: event
snapshot_kind: text
---
[
    RemoveRepository {
        installation_id: InstallationId(
            58286822,
        ),
        repo_id: RepositoryId(
            907533428,
        ),
    },
]
